--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     .emoji-chip { border:1px solid #444; background:#1f1f1f; padding:6px 8px; border-radius:8px; cursor:pointer; }
     .emoji-chip:hover { background:#333; }
 
-    /* Music floating player */
+/*     /* Music floating player */
     .music-fab {
       position: fixed; right: 20px; bottom: 20px;
       background:#3b3b3b; border:1px solid #4a4a4a; border-radius:999px; padding:10px;
@@ -111,7 +111,7 @@
     .music-details { display:flex; align-items:center; gap:8px; opacity:0; transition: opacity .2s; white-space:nowrap; }
     .music-fab:hover .music-details { opacity:1; }
     .music-input { width:200px; }
-    .noise-buttons { display:flex; gap:6px; }
+    .noise-buttons { display:flex; gap:6px; } */
   
 /* === Mood + Heatmap additions === */
 .mood-top {
