--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
     .emoji-chip { border:1px solid #444; background:#1f1f1f; padding:6px 8px; border-radius:8px; cursor:pointer; }
     .emoji-chip:hover { background:#333; }
 
-/*     /* Music floating player */
-    .music-fab {
+    /* Music floating player */
+    /*.music-fab {
       position: fixed; right: 20px; bottom: 20px;
       background:#3b3b3b; border:1px solid #4a4a4a; border-radius:999px; padding:10px;
       display:flex; align-items:center; gap:10px; width:48px; overflow:hidden;
@@ -154,7 +154,7 @@
 
 
 /* === Music Panel (roomy popup) === */
-#musicPanel{ resize: both; overflow: auto;
+/*#musicPanel{ resize: both; overflow: auto;
   position: fixed;
   right: 16px;
   bottom: 16px;
@@ -187,7 +187,7 @@
 #musicUrl{ max-width: 500px; }
 @media (max-width:560px){
   #musicPanel{ resize: both; overflow: auto; width: calc(100% - 20px); right:10px; left:10px; }
-}
+}*/
 
 
 /* === Podcast Panel (audio-first) === */
